--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -10,6 +10,8 @@ Default Play Length=03:00
 Loop=false
 ;Play start song, only (or else play all songs)
 SingleTrack=false
+; Convert other programs to turbo-tape or normal tape format
+TurboTape=true
 
 [C1541]
 ; Turn On Drive
