--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -86,8 +86,12 @@ DefaultClockSpeed=PAL
 UserClockSpeed=
 ; Sets the default sid model when the tune doesn't specify its preferred model.
 DefaultSidModel=MOS6581
-; Ignores the tune's sid model and instead uses this value in every case.
+; Ignores the tune's sid model and instead uses this value for the first SID  (default: use DefaultSidModel)
 UserSidModel=
+; Ignores the tune's sid model and instead uses this value for the second SID (default: use 1st SIDs model)
+StereoSidModel=
+; Ignores the tune's sid model and instead uses this value for the third SID (default: use 1st SIDs model)
+3rdSIDModel=
 ; Select HardSID4U chip number according to the SID chip type.
 ; Chip numbers are 1..4. E.G. use chip 1 for 6581 and chip 2 for 8580
 HardSID6581=1
@@ -112,10 +116,6 @@ forceStereoTune=false
 ; Force the tune to be a 3-SID tune (if it could not be detected).
 ; A third SID is then emulated using base address thirdSIDBase.
 force3SIDTune=false
-; Use this SID model for stereo SID (default: use 1st SIDs model)
-StereoSidModel=MOS6581
-; Use this SID model for 3-SID (default: use 1st SIDs model)
-3rdSIDModel=MOS6581
 
 ; Filters to be used of Dag Lem's resid 1.0 beta
 ;===============================================
