--- a/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
+++ b/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
@@ -5,9 +5,9 @@ VOLUME_CONTROL=Volume Control
 MAIN_SID_LEVEL=Main SID level
 SECOND_SID_LEVEL=2.SID level
 THIRD_SID_LEVEL=3.SID level
-MAIN_BALANCE=SID Balance (Left to Right Speaker)
-SECOND_BALANCE=2.SID Balance (Right to Left Speaker)
-THIRD_BALANCE=3.SID Balance (Right to Left Speaker)
+MAIN_BALANCE=Main SID Balance
+SECOND_BALANCE=Stereo SID Balance
+THIRD_BALANCE=3-SID Balance
 
 SID_CONTROL=SID Control
 MAIN_EMULATION=Emulation:
