--- a/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
+++ b/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
@@ -63,5 +63,5 @@ MUTE_8=8   - mute voice 8 (3-SID)
 MUTE_9=9   - mute voice 9 (3-SID)
 FILTER_ENABLE=f   - enable/disable filter
 STEREO_FILTER_ENABLE=g   - enable/disable stereo filter
-3RD_SID_FILTER_ENABLE=G   - enable/disable 3rd SID filter
+3RD_SID_FILTER_ENABLE=G   - enable/disable 3-SID filter
 QUIT=q   - quit player
