--- a/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
@@ -3,8 +3,8 @@ TITLE=Emulation Settings
 
 VOLUME_CONTROL=Volume Control
 MAIN_SID_LEVEL=Main SID level
-SECOND_SID_LEVEL=2.SID level
-THIRD_SID_LEVEL=3.SID level
+SECOND_SID_LEVEL=Stereo SID level
+THIRD_SID_LEVEL=3-SID level
 MAIN_BALANCE=Main SID Balance
 SECOND_BALANCE=Stereo SID Balance
 THIRD_BALANCE=3-SID Balance
