--- a/jsidplay2/src/main/resources/sidplay/logconfig.properties
+++ b/jsidplay2/src/main/resources/sidplay/logconfig.properties
@@ -35,7 +35,7 @@ handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 #libsidplay.components.mos6510.MOS6510.level=ALL 
 
 # Show SID register writes
-#resid_builder.ReSID.level=ALL
+#resid_builder.ReSIDBase.level=ALL
 
 #
 # Handlers 
