--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -92,10 +92,13 @@ UserSidModel=
 StereoSidModel=
 ; Ignores the tune's sid model and instead uses this value for the third SID (default: use 1st SIDs model)
 3rdSIDModel=
-; Select HardSID4U chip number according to the SID chip type.
-; Chip numbers are 1..4. E.G. use chip 1 for 6581 and chip 2 for 8580
-HardSID6581=1
-HardSID8580=2
+; Select HardSID4U chip number (0..3) according to the SID chip type,
+; because we always want to match the correct HardSID4U chip according to the tune.
+; The stereo device will always be the other one.
+; And for 3-SID always the next available device not configured here is matched.
+; E.g. Mono: Use chip 0 for 6581 and chip 1 for 8580 (Stereo: use 0 and 1, 3-SID use 0, 1 and 2)
+HardSID6581=0
+HardSID8580=1
 ; Use this to enable or disable the SID internal filter.
 UseFilter=true
 ; Use this to enable or disable a second SID internal filter.
