--- a/trunk/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/oscilloscope/Oscilloscope.properties
@@ -2,7 +2,7 @@ OSCILLOSCOPE=Oscilloscope
 
 MONO_SID_=Mono SID:
 STEREO_SID_=Stereo SID:
-3SID_=3rd SID:
+3SID_=3-SID:
 MUTE_VOICE_1=Mute Voice 1
 MUTE_VOICE_2=Mute Voice 2
 MUTE_VOICE_3=Mute Voice 3
