--- a/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
+++ b/trunk/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
@@ -1,6 +1,7 @@
 USAGE=Display usage
 DEBUG=Display CPU register and assembly dumps
 DRIVER=Audio driver (NONE, SOUNDCARD, WAV, MP3, LIVE_WAV or LIVE_MP3)
+BUFFER_SIZE=Emulation Buffer Size
 DEVICEINDEX=Sound Device index for SOUNDCARD audio driver
 ENGINE=SID Engine (NONE, EMULATION, HARDSID)
 DEFAULT_EMULATION=Default Emulation (RESID, RESIDFP)
