adjustment for Linux

--- a/jsampler/.classpath
+++ b/jsampler/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.6.0_20/lib/tools.jar"/>
+	<classpathentry kind="lib" path="/usr/lib/jvm/java-8-oracle/lib/tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
