--- a/trunk/jsidplay2/src/main/resources/netsiddev/Settings.properties
+++ b/trunk/jsidplay2/src/main/resources/netsiddev/Settings.properties
@@ -3,5 +3,7 @@ TITLE=JSIDDevice: Settings
 AUDIO_SETTINGS=Audio Settings
 DEVICE=Device:
 EMULATION_SETTINGS=SID Emulation Settings
+CONNECTION_SETTINGS=Connection Settings
+ALLOW_EXTERNAL_CONNECTIONS=Allow external IP connections:
 DIGI_BOOST=8580 Digi Boost:
 OK=OK
