Added option in the Settings dialog to allow external IP connections. If this option is turned on, clients can connect to localhost/127.0.0.1 when they run on the same machine, or they can connect to the IP address of the machine on the same machine or on machines in the network. When the option is turned on/off, all client connections will be closed to apply the change.

--- a/jsidplay2/src/main/resources/netsiddev/Settings.properties
+++ b/jsidplay2/src/main/resources/netsiddev/Settings.properties
@@ -3,5 +3,7 @@ TITLE=JSIDDevice: Settings
 AUDIO_SETTINGS=Audio Settings
 DEVICE=Device:
 EMULATION_SETTINGS=SID Emulation Settings
+CONNECTION_SETTINGS=Connection Settings
+ALLOW_EXTERNAL_CONNECTIONS=Allow external IP connections:
 DIGI_BOOST=8580 Digi Boost:
 OK=OK
