Updated ids and info.

--- a/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -29,7 +29,7 @@ BC ?? ?? A9 ?? 99 04 D4 A9 ?? 99 01 D4 FE END
 8bitDigi/THCM
 12 D4 ?? ?? ?? 12 D4 ?? ?? ?? ?? 0F D4 ?? ?? ?? ?? ?? ?? ?? ?? ?? 4C 0C DD END
 
-4bitDigi/Mahoney
+8bitDigi/Mahoney
 AC ?? ?? C8 C0 09 D0 02 A0 01 8C ?? ?? 8A 29 0F AA BD ?? ?? 8D ?? ?? BD ?? ?? AA BD ?? ?? 8D 18 D4 END
 
 4753_Softcopy
@@ -220,6 +220,9 @@ Censored_Editor
 Charles_Callet
 99 04 D4 A9 00 99 04 D4 CA 10 F0 A9 ?? 8D 18 D4 60 END
 
+CharlesCallet/MusicPro
+AD ?? ?? 29 20 D0 03 4C ?? ?? AD ?? ?? 29 1F D0 03 4C ?? ?? C9 01 D0 03 4C END
+
 CheeseCutter_2.x
 C8 F0 ?? 98 9D ?? ?? B1 ?? C9 ?? D0 ?? FE ?? ?? BD ?? ?? 9D END
 (CheeseCutter_2.0-2.2)
@@ -287,6 +290,9 @@ C0 80 D0 04 85 57 A9 00 85 26 E8 86 5E 88 84 65 18 A5 57 65 26 8D 16 D4 85 57 A2
 
 Conrad/Samar
 A0 ?? B1 ?? C9 ?? B0 ?? 9D 04 D4 C8 98 18 65 ?? 9D ?? ?? 90 ?? FE ?? ?? 60 END
+
+Cope/Omicron
+8D 18 D4 AD ?? ?? F0 F5 AD ?? ?? F0 ?? A9 ?? 8D 17 D4 EE END
 
 CRL/Jay_Derrett
 29 0F 0A A8 B9 ?? ?? 85 ?? B9 ?? ?? 85 ?? EE ?? ?? AD ?? ?? C9 ?? D0 END
@@ -1792,10 +1798,6 @@ A9 01 99 8C 85 A9 55 99 8F 85 88 10 F3 A5 02 18 END
 
 ?Ice_Software
 30 18 70 38 A9 00 8D 04 D4 8D 0B D4 END
-
-?Infogrames
-10 DD AD ?? ?? D0 05 A9 ?? 8D ?? ?? 60 AE ?? ?? A1 ?? C9 FF D0 56 F6 ?? D0 02 F6 ?? A1 ?? C9 FF D0 0A BD ?? ?? 95 ?? BD ?? ?? 95 ?? A1 ?? 0A 8D END
-AD ?? ?? 8D ?? ?? A9 FE 2D ?? ?? 8D 04 D4 A9 ?? 0D ?? ?? 8D ?? ?? AD ?? ?? 8D ?? ?? A9 ?? 8D END
 
 ?Jim_Andron
 AA 29 1F 38 E9 01 99 ?? ?? 8A 29 E0 18 2A 2A 2A 2A 99 ?? ?? A9 00 99 ?? ?? B9 ?? ?? 0A AA BD END
