Updated to the latest signatures and info.

--- a/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -133,6 +133,9 @@ Audial_Revolution
 Audiomaster_V2
 20 F0 0E 4A 4A 4A 4A 4A 8D ?? ?? 8C ?? ?? 8C ?? ?? A0 00 B1 ?? D0 16 AD ?? ?? D0 0E A9 00 8D ?? ?? AD ?? ?? 8D 0B D4 8D ?? ?? 4C ?? ?? C9 FF F0 END
 
+Background_MusicEditor
+99 00 D4 88 10 F7 60 8A 48 B1 ?? 29 0F 0A AA BD ?? ?? 8D ?? ?? E8 BD ?? ?? 8D ?? ?? B1 END
+
 Bappalander/Spacelab1
 B1 B0 30 12 A0 00 B1 B2 30 16 C8 AA B1 B2 9D END
 
@@ -1621,9 +1624,6 @@ Tom_Snyder
 
 Tonal_Kaos
 9D 02 D4 B9 ?? ?? 9D ?? ?? 9D 03 D4 B9 ?? ?? 9D ?? ?? 9D 05 D4 B9 ?? ?? 9D ?? ?? 9D 06 D4 60 A1 E0 F6 E0 D0 02 F6 E1 9D ?? ?? 60 A1 E0 F6 E0 END
-
-Toni_Luode
-99 00 D4 88 10 F7 60 8A 48 B1 ?? 29 0F 0A AA BD ?? ?? 8D ?? ?? E8 BD ?? ?? 8D ?? ?? B1 END
 
 Torpex
 A9 ?? F0 ?? C9 FF D0 0C A9 08 8D 04 D4 8D 0B D4 8D 12 D4 60 A9 00 A2 02 9D END
