missing texts for 3-SID fixed

--- a/jsidplay2/src/main/resources/ui/tuneinfos/TuneInfos.properties
+++ b/jsidplay2/src/main/resources/ui/tuneinfos/TuneInfos.properties
@@ -17,11 +17,13 @@ HVSCEntry.clockFreq=Clock Freq.
 HVSCEntry.speed=Speed
 HVSCEntry.sidModel1=SID model 1
 HVSCEntry.sidModel2=SID model 2
+HVSCEntry.sidModel3=SID model 3
 HVSCEntry.compatibility=Compatibility
 HVSCEntry.tuneLength=Tune length (s)
 HVSCEntry.audio=Audio
 HVSCEntry.sidChipBase1=SID chip base 1
 HVSCEntry.sidChipBase2=SID chip base 2
+HVSCEntry.sidChipBase3=SID chip base 3
 HVSCEntry.driverAddress=Driver Address
 HVSCEntry.loadAddress=Load Address
 HVSCEntry.loadLength=Load Length
