--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -73,7 +73,7 @@ ThirdBalance=0.5
 ; Default SID engine (HARDSID,EMULATION)
 Engine=EMULATION
 ; Default emulation (RESID, RESIDFP)
-DefaultEmulation=RESID
+DefaultEmulation=RESIDFP
 ; Force to use specific SID emulation engine for the first SID (RESID,RESIDFP)
 UserEmulation=
 ; Force to use specific SID emulation engine for the second SID (RESID,RESIDFP)
