--- a/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -156,7 +156,7 @@ B2 35 34 32 37 32 END
 31 33 AC 34 30 39 36 AA 34 AC 32 35 36 END
 
 Ben_Daglish
-30 ?? B9 ?? ?? 48 29 F0 4A 4A 4A 4A END
+A8 B9 ?? ?? 48 29 F0 4A 4A 4A 4A END
 B9 ?? ?? 29 01 D0 ?? BD ?? ?? 38 E9 05 10 END
 A2 00 BD ?? ?? F0 08 A9 00 9D 04 D4 9D ?? ?? 8A 18 69 07 AA E0 ?? 90 EA END
 8D 03 D4 AC ?? ?? AD ?? ?? 19 ?? ?? 8D 04 D4 AD ?? ?? 18 6D ?? ?? A8 END
@@ -206,6 +206,9 @@ Capcom_2
 Carmine_TSM
 8D 04 D4 ?? ?? 8D 04 D4 EE ?? ?? AC END
 
+CCC_Editor
+AA E0 80 F0 16 BD END
+
 Censor_Digi_1
 8D 18 D4 A9 ?? 8D AND AD 0D DD 68 40 AND C5 ?? F0 ?? AD ?? ?? 4A 4A 4A 4A END
 4A 4A 4A 4A 8D 18 D4 E6 0A D0 02 E6 0B END
@@ -251,6 +254,9 @@ A9 ?? 85 ?? A5 ?? 18 65 ?? 09 ?? 8D 0F D4 85 ?? 90 ?? C6 ?? D0 END
 
 Chris_Huelsbeck
 9D ?? ?? BD ?? ?? A8 29 04 D0 0C 98 29 03 F0 07 29 01 D0 34 4C ?? ?? BD ?? ?? DD ?? ?? F0 05 90 3D 4C ?? ?? BD ?? ?? DD ?? ?? F0 62 90 30 BD END
+
+Chris_Huelsbeck_2
+04 D4 BD ?? ?? 99 00 D4 BD ?? ?? 99 01 D4 AD ?? ?? 99 04 D4 A5 ?? 18 69 01 END
 
 Chris_Murray
 C8 98 9D 04 D4 60 C0 80 D0 07 BD ?? ?? 9D 04 D4 60 END
@@ -648,7 +654,7 @@ Heathcliff/DigitalArts
 C8 B1 FE C9 A0 90 0A E9 A0 7D END
 
 Hein_Holt
-49 FF 85 ?? B9 ?? ?? 90 ?? 49 FF 7D ?? ?? 9D ?? ?? 9D 02 D4 BD ?? ?? 65 ?? 9D ?? ?? 9D 03 D4 END
+9D 02 D4 4C ?? ?? ?? 7F 9D ?? ?? C8 ?? ?? 09 80 9D ?? ?? C8 98 9D END
 
 Henrik_Jensen
 85 ?? B1 ?? C9 E0 90 ?? C9 F0 END
@@ -710,8 +716,7 @@ Jason_Briggs
 AE ?? ?? E0 01 F0 07 CA 8E ?? ?? EA EA 60 AC ?? ?? A9 ?? 8D 0B D4 B9 ?? ?? 8D 08 D4 B9 ?? ?? 8D 07 D4 B9 ?? ?? 8D ?? ?? A9 ?? 8D 0B D4 C8 END
 
 Jason_Brooke
-99 02 D4 BD ?? ?? 99 03 D4 BD ?? ?? 29 06 C9 06 D0 0A A5 F9 69 30 85 F9 A9 ?? D0 03 BD ?? ?? 99 04 D4 60 E8 BC ?? ?? BD ?? ?? F0 F6 10 1F A9 01 9D ?? ?? BD ?? ?? 99 05 D4 A9 00 99 06 D4 99 04 D4 END
-8E 00 D4 8C 01 D4 AD ?? ?? 6A 6E ?? ?? AD ?? ?? B0 03 AD ?? ?? 8D 04 D4 END
+05 BC ?? ?? 29 7F 18 7D ?? ?? 7D END
 
 Jason_Page
 8D 17 D4 8D ?? ?? A2 02 95 ?? 95 ?? 9D ?? ?? CA 10 F6 28 60 CE ?? ?? F0 03 4C ?? ?? A2 00 END
@@ -994,10 +999,9 @@ Martijn_Schutten
 
 Martin_Galway
 90 02 E6 ?? A0 00 B1 ?? C9 C0 90 END
-B0 F3 A0 00 B1 ?? C9 C0 90 END
+29 81 F0 ?? 10 06 20 ?? ?? 4C ?? ?? 20 ?? ?? 4C END
 A0 00 B1 ?? ?? ?? ?? 29 3F C9 3C 90 ?? F0 ?? C8 C9 3F F0 END
-A5 ?? 4A 90 04 C6 ?? F0 ?? 4C END
-A0 1C A2 03 20 ?? ?? 9D 15 D4 88 CA 10 F6 END
+A0 ?? A2 03 ?? ?? ?? 9D 15 D4 88 CA 10 F6 END
 C0 ?? F0 ?? BE ?? ?? B9 END
 
 Martin_Galway_Digi
@@ -1757,11 +1761,17 @@ AD ?? ?? 8D 00 D4 AD ?? ?? 8D 01 D4 A9 ?? 0D ?? ?? 8D 04 D4 4C END
 ?ArgusPress
 60 A0 01 B1 ?? 8D ?? ?? 88 B1 ?? C9 F0 B0 ?? 20 ?? ?? 8E 0E D4 8C 0F D4 20 ?? ?? A5 ?? 18 69 02 85 ?? A5 ?? 69 00 85 ?? 60 38 E9 F0 0A AA BD END
 
+?Beam_Software
+40 D0 ?? FE ?? ?? BC ?? ?? B1 ?? AC ?? ?? 99 02 D4 END
+
 ?Bob_Vieira/Epyx
 20 ?? ?? 9D ?? ?? 20 ?? ?? A5 ?? 9D ?? ?? A5 ?? 9D ?? ?? 8A 38 E9 07 30 04 AA 4C ?? ?? 60 ?? ?? BE END
 
 ?CBS
 4C ?? ?? 0E ?? ?? AD ?? ?? 0A A8 0A 0A 18 6D END
+
+?Caesar_Studio
+29 F0 F0 ?? 4A 4A 4A 4A 18 7D ?? ?? F0 02 10 END
 
 ?Charlie_Barr/Data_East
 A8 B9 ?? ?? D0 ?? A9 ?? 9D ?? ?? BD ?? ?? D0 ?? A9 ?? 9D 04 D4 60 BD ?? ?? D0 ?? B9 ?? ?? 9D 00 D4 B9 ?? ?? 9D 01 D4 A9 ?? 9D 05 D4 END
@@ -1831,6 +1841,9 @@ A2 ?? AD ?? ?? 8D 04 D4 CA D0 ?? AD ?? ?? 09 01 8D 04 D4 60 END
 
 ?Source
 E0 0E D0 02 A2 14 END
+
+?Source_2
+D0 F5 68 2C ?? ?? F0 04 C8 C8 E8 E8 B1 END
 
 ?Steve_Kellet
 CA CA 88 10 E2 A9 03 8D END
