--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -6,6 +6,10 @@ HVSC Dir=
 EnableDatabase=true
 ;Default song length [mm:]ss (will be used, if the song length database does not contain related entries or is disabled)
 Default Play Length=03:00
+; Default fade-in time [mm:]ss (audio volume will be increased to the max)
+Fade In Time=00:00
+; Default fade-out time [mm:]ss (audio volume should be lowered to zero)
+Fade Out Time=00:00
 ;Loop a tune (turn on to repeat a single tune)
 Loop=false
 ;Play start song, only (or else play all songs)
