fade-in fade-out playback options added

--- a/jsidplay2/src/main/resources/ui/favorites/Favorites.properties
+++ b/jsidplay2/src/main/resources/ui/favorites/Favorites.properties
@@ -15,6 +15,12 @@ HINT_PLAYLISTS=Please click on the plus icon to add a new Playlist.
 
 PLAYBACK_OPTIONS=Playback Options
 
+FADE_IN_LENGTH=Fade-in:
+FADE_IN_LENGTH_TIP=Fade-in time in s (00:00 - disabled)
+FADE_IN_LENGTH_FORMAT=The time format is mm:ss
+FADE_OUT_LENGTH=Fade-out:
+FADE_OUT_LENGTH_TIP=Fade-out time (00:00 - disabled)
+FADE_OUT_LENGTH_FORMAT=The time format is mm:ss
 OFF=Playback Off
 NORMAL=Sequential
 RANDOM_ONE_PLAYLIST=Random (One Playlist)
