--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -52,14 +52,14 @@ Char Junction Left='+'
 Char Junction Right='+'
 
 [Audio]
-; Audio output device (Soundcard,WAV,MP3,Record WAV,Record MP3)
-Audio=Soundcard
+; Audio output device (SOUNDCARD,WAV,MP3,LIVE_WAV,LIVE_MP3)
+Audio=SOUNDCARD
 ; Soundcard Device (0..<numOfDevices>)
 Device=0
 ; Allows overriding of the default playback/record frequency. The frequency must be provided in Hertz (Hz) and by default it is set to 44100.
 Frequency=48000
-; Sampling method in use
-Sampling=Decimate
+; Sampling method in use (DECIMATE,RESAMPLE)
+Sampling=DECIMATE
 ; Volume of the SID chip 0(-6db)..12(+6db)
 MainVolume=0
 ; Volume of a second SID chip (stereo) 0(-6db)..12(+6db)
