--- a/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
+++ b/jsidplay2/src/main/resources/sidplay/consoleplayer/ConsolePlayer.properties
@@ -9,7 +9,7 @@ RECORDING_FILENAME=Output filename for recording
 START_SONG=Start song (default: tune start song)
 LOOP=Loop track
 SINGLE=Single track
-FREQUENCY=Set frequency in Hz
+FREQUENCY=Sampling frequency in Hz
 DUAL_SID=Force dual SID environment
 THIRD_SID=Force third SID environment
 FORCE_CLOCK=Force user specific VIC clock speed PAL or NTSC (default: defined by song)
