--- a/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -56,15 +56,15 @@ Char Junction Right='+'
 Audio=SOUNDCARD
 ; Soundcard Device (0..<numOfDevices>)
 Device=0
-; Allows overriding of the default playback/record frequency. The frequency must be provided in Hertz (Hz) and by default it is set to 44100.
-Frequency=48000
+; Allows overriding of the defaultsampling rate (LOW=44100Hz,MEDIUM=48000Hz,HIGH=96000Hz)
+Sampling Rate=MEDIUM
 ; Sampling method in use (DECIMATE,RESAMPLE)
 Sampling=DECIMATE
-; Volume of the SID chip 0(-6db)..12(+6db)
+; Volume of the SID chip -6db..6db
 MainVolume=0
-; Volume of a second SID chip (stereo) 0(-6db)..12(+6db)
+; Volume of a second SID chip (stereo) -6db..6db
 SecondVolume=0
-; Volume of a third SID chip (3-sid) 0(-6db)..12(+6db)
+; Volume of a third SID chip (3-sid) -6db..6db
 ThirdVolume=0
 ; Panning feature: spreading of the SID chip sound signal to the two stereo channels 0(left speaker)..0.5(centered)..1(right speaker)
 MainBalance=0.0
@@ -78,24 +78,24 @@ ThirdBalance=0.5
 Engine=EMULATION
 ; Default emulation (RESID, RESIDFP)
 DefaultEmulation=RESIDFP
-; Force to use specific SID emulation engine for the first SID (RESID,RESIDFP)
-UserEmulation=
-; Force to use specific SID emulation engine for the second SID (RESID,RESIDFP)
-StereoEmulation=
-; Force to use specific SID emulation engine for the third SID (RESID,RESIDFP)
-3rdSIDEmulation=
+; Force to use specific SID emulation engine for the mono SID (DEFAULT,RESID,RESIDFP)
+UserEmulation=DEFAULT
+; Force to use specific SID emulation engine for the stereo SID (DEFAULT,RESID,RESIDFP)
+StereoEmulation=DEFAULT
+; Force to use specific SID emulation engine for the 3-SID (DEFAULT,RESID,RESIDFP)
+3rdSIDEmulation=DEFAULT
 ; Sets the default system clock when the tune doesn't specify its preferred clock.
 DefaultClockSpeed=PAL
 ; Ignores the tune's system clock and instead uses this value in every case.
 UserClockSpeed=
-; Sets the default sid model when the tune doesn't specify its preferred model.
+; Sets the default sid model when the tune doesn't specify its preferred model (MOS6581,MOS8580)
 DefaultSidModel=MOS6581
-; Ignores the tune's sid model and instead uses this value for the first SID  (default: use DefaultSidModel)
-UserSidModel=
-; Ignores the tune's sid model and instead uses this value for the second SID (default: use 1st SIDs model)
-StereoSidModel=
-; Ignores the tune's sid model and instead uses this value for the third SID (default: use 1st SIDs model)
-3rdSIDModel=
+; Ignores the tune's sid model and instead uses this value for the mono SID  (AUTO,MOS6581,MOS8580)
+UserSidModel=AUTO;
+; Ignores the tune's sid model and instead uses this value for the stereo SID (AUTO,MOS6581,MOS8580)
+StereoSidModel=AUTO;
+; Ignores the tune's sid model and instead uses this value for the 3-SID (AUTO,MOS6581,MOS8580)
+3rdSIDModel=AUTO;
 ; Select HardSID4U chip number (0..3) according to the SID chip type,
 ; because we always want to match the correct HardSID4U chip according to the tune.
 ; The stereo device will always be the other one.
@@ -103,19 +103,19 @@ StereoSidModel=
 ; E.g. Mono: Use chip 0 for 6581 and chip 1 for 8580 (Stereo: use 0 and 1, 3-SID use 0, 1 and 2)
 HardSID6581=0
 HardSID8580=1
-; Use this to enable or disable the SID internal filter.
+; Use this to enable or disable the mono SID internal filter.
 UseFilter=true
-; Use this to enable or disable a second SID internal filter.
+; Use this to enable or disable a stereo SID internal filter.
 UseStereoFilter=true
-; Use this to enable or disable a third SID internal filter.
+; Use this to enable or disable a 3-SID internal filter.
 Use3rdSIDFilter=true
 ; For fake stereo (two SIDs at the same address): which SID chip should be read
 SidNumToRead=0
 ; Use Digiboost hack for 6581/8580
 DigiBoosted8580=false
-; Base address of a second emulated SID chip (if it could not be detected).
+; Base address of the stereo SID chip (if it could not be detected).
 dualSidBase=0xd420
-; Base address of a third emulated SID chip (if it could not be detected).
+; Base address of the 3-SID chip (if it could not be detected).
 thirdSIDBase=0xd440
 ; Force the tune to be a stereo tune (if it could not be detected).
 ; A second SID is then emulated using base address dualSidBase.
@@ -126,7 +126,7 @@ force3SIDTune=false
 
 ; Filters to be used of Dag Lem's resid 1.0 beta
 ;===============================================
-; Define the filter to use for the 6581 and 8580 SIDs (for the first, a second and a third SID chip).
+; Define the filter to use for the 6581 and 8580 SIDs (for mono, stereo and 3-SID chip).
 ; This value refers to a section name in this file.
 Filter6581=FilterAverage6581
 Stereo_Filter6581=FilterAverage6581
@@ -137,7 +137,7 @@ Stereo_Filter8580=FilterAverage8580
 
 ; Filters to be used of Antti S. Lankila's resid-fp (distortion simulation)
 ;==========================================================================
-; Define the filter to use for the 6581 and 8580 SIDs.
+; Define the filter to use for the 6581 and 8580 SIDs (for mono, stereo and 3-SID chip).
 ; This value refers to a section name in this file.
 ReSIDfp_Filter6581=FilterAlankila6581R4AR_3789
 ReSIDfp_Stereo_Filter6581=FilterAlankila6581R4AR_3789
