--- a/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
+++ b/jsidplay2/src/main/resources/ui/emulationsettings/EmulationSettings.properties
@@ -20,7 +20,12 @@ THIRD_MODEL=Model:
 DEFAULT_SID=Default Model:
 
 STEREO_MODE=SID Count:
+DEFAULT=Default
+RESID=Dag Lem's resid 1.0 beta
+RESIDFP=Antti S. Lankila's resid-fp
 AUTO=Automatic
+MOS6581=MOS6581
+MOS8580=MOS8580
 FAKE_STEREO=2 SIDs using same base address (Mono forced as Stereo)
 STEREO=2 SIDs (Force Stereo)
 3SID=3 SIDs (Force Stereo)
