--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -91,11 +91,11 @@ UserClockSpeed=
 ; Sets the default sid model when the tune doesn't specify its preferred model (MOS6581,MOS8580)
 DefaultSidModel=MOS6581
 ; Ignores the tune's sid model and instead uses this value for the mono SID  (AUTO,MOS6581,MOS8580)
-UserSidModel=AUTO;
+UserSidModel=AUTO
 ; Ignores the tune's sid model and instead uses this value for the stereo SID (AUTO,MOS6581,MOS8580)
-StereoSidModel=AUTO;
+StereoSidModel=AUTO
 ; Ignores the tune's sid model and instead uses this value for the 3-SID (AUTO,MOS6581,MOS8580)
-3rdSIDModel=AUTO;
+3rdSIDModel=AUTO
 ; Select HardSID4U chip number (0..3) according to the SID chip type,
 ; because we always want to match the correct HardSID4U chip according to the tune.
 ; The stereo device will always be the other one.
