--- a/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
+++ b/trunk/jsidplay2/src/main/resources/sidplay/ini/sidplay2.ini
@@ -14,6 +14,16 @@ Fade Out Time=00:00
 Loop=false
 ;Play start song, only (or else play all songs)
 SingleTrack=false
+; VIC palette settings (PAL and NTSC)
+Brightness=0
+Contrast=1
+Gamma=2
+Saturation=0.5
+Phase Shift=-15
+Offset=0.9
+Tint=0
+Blur=0.5
+Bleed=0.5
 ; Convert other programs to turbo-tape or normal tape format
 TurboTape=true
 
