--- a/trunk/jsidplay2/src/main/resources/ui/videoscreen/Video.properties
+++ b/trunk/jsidplay2/src/main/resources/ui/videoscreen/Video.properties
@@ -7,6 +7,7 @@ INSERT_CARTRIDGE=Insert Cartridge...
 MONITOR=Monitor
 
 MONITOR_SETTINGS=Monitor Settings
+SCALING=Scaling
 BRIGHTNESS=Brightness
 CONTRAST=Contrast
 GAMMA=Gamma
